--- a/HomePricePredictionModel.ipynb
+++ b/HomePricePredictionModel.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load and describe data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -299,22 +307,381 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "iowa_file_path = \"./data/home-data/train.csv\"\n",
-    "home_data = pd.read_csv(iowa_file_path)\n",
+    "iowa_data_path = \"./data/home-data/train.csv\"\n",
+    "home_data = pd.read_csv(iowa_data_path)\n",
     "\n",
     "home_data.describe()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Specify prediction target"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All columns names"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Id', 'MSSubClass', 'MSZoning', 'LotFrontage', 'LotArea', 'Street',\n",
+       "       'Alley', 'LotShape', 'LandContour', 'Utilities', 'LotConfig',\n",
+       "       'LandSlope', 'Neighborhood', 'Condition1', 'Condition2', 'BldgType',\n",
+       "       'HouseStyle', 'OverallQual', 'OverallCond', 'YearBuilt', 'YearRemodAdd',\n",
+       "       'RoofStyle', 'RoofMatl', 'Exterior1st', 'Exterior2nd', 'MasVnrType',\n",
+       "       'MasVnrArea', 'ExterQual', 'ExterCond', 'Foundation', 'BsmtQual',\n",
+       "       'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinSF1',\n",
+       "       'BsmtFinType2', 'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF', 'Heating',\n",
+       "       'HeatingQC', 'CentralAir', 'Electrical', '1stFlrSF', '2ndFlrSF',\n",
+       "       'LowQualFinSF', 'GrLivArea', 'BsmtFullBath', 'BsmtHalfBath', 'FullBath',\n",
+       "       'HalfBath', 'BedroomAbvGr', 'KitchenAbvGr', 'KitchenQual',\n",
+       "       'TotRmsAbvGrd', 'Functional', 'Fireplaces', 'FireplaceQu', 'GarageType',\n",
+       "       'GarageYrBlt', 'GarageFinish', 'GarageCars', 'GarageArea', 'GarageQual',\n",
+       "       'GarageCond', 'PavedDrive', 'WoodDeckSF', 'OpenPorchSF',\n",
+       "       'EnclosedPorch', '3SsnPorch', 'ScreenPorch', 'PoolArea', 'PoolQC',\n",
+       "       'Fence', 'MiscFeature', 'MiscVal', 'MoSold', 'YrSold', 'SaleType',\n",
+       "       'SaleCondition', 'SalePrice'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "home_data.columns"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
+    "y = home_data.SalePrice"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_names = [\"LotArea\", \"YearBuilt\", \"1stFlrSF\", \"2ndFlrSF\", \"FullBath\", \"BedroomAbvGr\", \"TotRmsAbvGrd\"]\n",
+    "X = home_data[feature_names]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Review Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>YearBuilt</th>\n",
+       "      <th>1stFlrSF</th>\n",
+       "      <th>2ndFlrSF</th>\n",
+       "      <th>FullBath</th>\n",
+       "      <th>BedroomAbvGr</th>\n",
+       "      <th>TotRmsAbvGrd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1460.000000</td>\n",
+       "      <td>1460.000000</td>\n",
+       "      <td>1460.000000</td>\n",
+       "      <td>1460.000000</td>\n",
+       "      <td>1460.000000</td>\n",
+       "      <td>1460.000000</td>\n",
+       "      <td>1460.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>10516.828082</td>\n",
+       "      <td>1971.267808</td>\n",
+       "      <td>1162.626712</td>\n",
+       "      <td>346.992466</td>\n",
+       "      <td>1.565068</td>\n",
+       "      <td>2.866438</td>\n",
+       "      <td>6.517808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9981.264932</td>\n",
+       "      <td>30.202904</td>\n",
+       "      <td>386.587738</td>\n",
+       "      <td>436.528436</td>\n",
+       "      <td>0.550916</td>\n",
+       "      <td>0.815778</td>\n",
+       "      <td>1.625393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1300.000000</td>\n",
+       "      <td>1872.000000</td>\n",
+       "      <td>334.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7553.500000</td>\n",
+       "      <td>1954.000000</td>\n",
+       "      <td>882.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>9478.500000</td>\n",
+       "      <td>1973.000000</td>\n",
+       "      <td>1087.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>11601.500000</td>\n",
+       "      <td>2000.000000</td>\n",
+       "      <td>1391.250000</td>\n",
+       "      <td>728.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>215245.000000</td>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>4692.000000</td>\n",
+       "      <td>2065.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             LotArea    YearBuilt     1stFlrSF     2ndFlrSF     FullBath  \\\n",
+       "count    1460.000000  1460.000000  1460.000000  1460.000000  1460.000000   \n",
+       "mean    10516.828082  1971.267808  1162.626712   346.992466     1.565068   \n",
+       "std      9981.264932    30.202904   386.587738   436.528436     0.550916   \n",
+       "min      1300.000000  1872.000000   334.000000     0.000000     0.000000   \n",
+       "25%      7553.500000  1954.000000   882.000000     0.000000     1.000000   \n",
+       "50%      9478.500000  1973.000000  1087.000000     0.000000     2.000000   \n",
+       "75%     11601.500000  2000.000000  1391.250000   728.000000     2.000000   \n",
+       "max    215245.000000  2010.000000  4692.000000  2065.000000     3.000000   \n",
+       "\n",
+       "       BedroomAbvGr  TotRmsAbvGrd  \n",
+       "count   1460.000000   1460.000000  \n",
+       "mean       2.866438      6.517808  \n",
+       "std        0.815778      1.625393  \n",
+       "min        0.000000      2.000000  \n",
+       "25%        2.000000      5.000000  \n",
+       "50%        3.000000      6.000000  \n",
+       "75%        3.000000      7.000000  \n",
+       "max        8.000000     14.000000  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>YearBuilt</th>\n",
+       "      <th>1stFlrSF</th>\n",
+       "      <th>2ndFlrSF</th>\n",
+       "      <th>FullBath</th>\n",
+       "      <th>BedroomAbvGr</th>\n",
+       "      <th>TotRmsAbvGrd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8450</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>856</td>\n",
+       "      <td>854</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9600</td>\n",
+       "      <td>1976</td>\n",
+       "      <td>1262</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11250</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>920</td>\n",
+       "      <td>866</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9550</td>\n",
+       "      <td>1915</td>\n",
+       "      <td>961</td>\n",
+       "      <td>756</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14260</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1145</td>\n",
+       "      <td>1053</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LotArea  YearBuilt  1stFlrSF  2ndFlrSF  FullBath  BedroomAbvGr  \\\n",
+       "0     8450       2003       856       854         2             3   \n",
+       "1     9600       1976      1262         0         2             3   \n",
+       "2    11250       2001       920       866         2             3   \n",
+       "3     9550       1915       961       756         1             3   \n",
+       "4    14260       2000      1145      1053         2             4   \n",
+       "\n",
+       "   TotRmsAbvGrd  \n",
+       "0             8  \n",
+       "1             6  \n",
+       "2             6  \n",
+       "3             7  \n",
+       "4             9  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
-    "avg_lot_size = int(round(home_data[\"LotArea\"].mean()))\n",
-    "newest_home_age = datetime.now().year - int(home_data[\"YearBuilt\"].max())"
+    "X.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Specify and fit model"
    ]
   },
   {
@@ -322,7 +689,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "iowa_model = DecisionTreeRegressor(random_state = 0)\n",
+    "iowa_model.fit(X, y)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = iowa_model.predict(X)"
+   ]
   }
  ],
  "metadata": {
@@ -341,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
