migrate titanic to .py file

--- a/titanic/TitanicCompetition.ipynb
+++ b/titanic/TitanicCompetition.ipynb
@@ -18,36 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading titanic.zip to ./data\\titanic\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 34.1k/34.1k [00:00<00:00, 612kB/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Extracting archive ./data\\titanic/titanic.zip to ./data\\titanic\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Skipping, found downloaded files in \"../data\\titanic\" (use force=True to force download)\n"
      ]
     }
    ],
@@ -55,7 +33,7 @@
     "import opendatasets as od\n",
     "\n",
     "dataset_url= 'https://www.kaggle.com/c/titanic/data'\n",
-    "dataset_path = './data'\n",
+    "dataset_path = '../data'\n",
     "\n",
     "od.download(dataset_url, data_dir=dataset_path)"
    ]
@@ -70,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +188,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +352,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
